--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,13 +6,12 @@
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Theme color for Android Chrome and Safari (light/dark mode) -->
-  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#111827" media="(prefers-color-scheme: dark)">
+  <!-- Single theme-color to be updated dynamically -->
+  <meta name="theme-color" content="#ffffff">
 
-  <!-- iOS Safari status bar -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <!-- iOS specific tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <title>Novo</title>
 </head>
